--- a/force-app/main/default/classes/SyncOrchestrator.cls
+++ b/force-app/main/default/classes/SyncOrchestrator.cls
@@ -64,13 +64,7 @@ public class SyncOrchestrator implements Queueable {
     
     private Unified_Sync_Config__mdt getConfig() {
         try {
-            return [
-                SELECT batchSizeContentVersion__c, batchSizeAttachment__c, 
-                       batchSizeCDL__c, hourlyDeltaLookbackMins__c
-                FROM Unified_Sync_Config__mdt
-                WHERE DeveloperName = 'Default'
-                LIMIT 1
-            ];
+            return Unified_Sync_Config__mdt.getInstance('Default');
         } catch (Exception e) {
             System.debug(LoggingLevel.WARN, 'Could not load CMDT config, using defaults');
             return getDefaultConfig();
