--- a/force-app/main/default/classes/HourlyDeltaScheduler.cls
+++ b/force-app/main/default/classes/HourlyDeltaScheduler.cls
@@ -35,12 +35,7 @@ public class HourlyDeltaScheduler implements Schedulable {
     
     private Unified_Sync_Config__mdt getConfig() {
         try {
-            return [
-                SELECT hourlyDeltaEnabled__c, hourlyDeltaLookbackMins__c
-                FROM Unified_Sync_Config__mdt
-                WHERE DeveloperName = 'Default'
-                LIMIT 1
-            ];
+            return Unified_Sync_Config__mdt.getInstance('Default');
         } catch (Exception e) {
             System.debug(LoggingLevel.WARN, 'Could not load CMDT config, using defaults');
             return getDefaultConfig();
