Just added ApexDocs throughout all the project files

--- a/force-app/main/default/classes/BatchExtractAttachments.cls
+++ b/force-app/main/default/classes/BatchExtractAttachments.cls
@@ -1,7 +1,8 @@
 /**
- * @description Batch job to extract and process Attachments
+ * @description Batch job to extract and process Attachments for unified file synchronization
  * @author Mritesh Adak
  * @date 2025
+ * @since 1.0
  */
 public with sharing class BatchExtractAttachments implements Database.Batchable<SObject>, Database.Stateful {
     
@@ -12,11 +13,21 @@ public with sharing class BatchExtractAttachments implements Database.Batchable<
     private String sampleError;
     private Unified_Sync_Log__c logRecord;
     
+    /**
+     * @description Constructor for BatchExtractAttachments
+     * @param mode The synchronization mode (FULL or DELTA)
+     * @param lookbackMinutes The lookback window in minutes for delta sync
+     */
     public BatchExtractAttachments(SyncMode mode, Integer lookbackMinutes) {
         this.mode = mode;
         this.lookbackMinutes = lookbackMinutes;
     }
     
+    /**
+     * @description Starts the batch job by preparing the query
+     * @param bc The batchable context
+     * @return Database.QueryLocator The query locator for Attachment records
+     */
     public Database.QueryLocator start(Database.BatchableContext bc) {
         this.logRecord = UnifiedSyncLogService.startLog(
             'BatchExtractAttachments',
@@ -37,6 +48,11 @@ public with sharing class BatchExtractAttachments implements Database.Batchable<
         return Database.getQueryLocator(query);
     }
     
+    /**
+     * @description Processes a batch of Attachment records
+     * @param bc The batchable context
+     * @param attachments The list of Attachment records to process
+     */
     public void execute(Database.BatchableContext bc, List<Attachment> attachments) {
         try {
             List<FileDTO> fileDtos = FileRecordMapper.fromAttachments(attachments);
@@ -99,6 +115,10 @@ public with sharing class BatchExtractAttachments implements Database.Batchable<
         }
     }
     
+    /**
+     * @description Completes the batch job
+     * @param bc The batchable context
+     */
     public void finish(Database.BatchableContext bc) {
         UnifiedSyncLogService.completeLog(
             logRecord,
